se agrego se configuro git

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <p>
-        estoy probando visual studio code
+        estoy probando visual studio code,ya instale git
     </p>
 </body>
 </html>
